<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="server_host_label">Server Host:</string>
    <string name="server_port_label">Server Port:</string>
    <string name="user_name_label">User Name:</string>
    <string name="password_label">Password:</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="email_label">Email:</string>
    <string name="gender_label">Gender:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="sign_in_button_label">SIGN IN</string>
    <string name="register_button_label">REGISTER</string>
    <string name="title_activity_map">Map</string>
    <string name="map_text_default">Click on a marker\nto see event details</string>
    <string name="PA_first_name_label">First Name</string>
    <string name="PA_last_name_label">Last Name</string>
    <string name="PA_gender_label">Gender</string>

    <string-array name="color_arrays">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="map_type_arrays">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>

</resources>
