<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bond.android.familymap.PersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:paddingLeft="8dp">

        <TextView
            android:id="@+id/PA_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="First Name Here"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PA_first_name_label"/>

        <View android:background="@color/BLACK"
              android:layout_height="1dp"
              android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/PA_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Last Name Here"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PA_last_name_label"/>

        <View android:background="@color/BLACK"
              android:layout_height="1dp"
              android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/PA_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Gender Here"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PA_gender_label"/>

        <View android:background="@color/BLACK"
              android:layout_height="1dp"
              android:layout_width="match_parent"/>

        <TextView
            android:id="@+id/life_events_list_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LIFE EVENTS"
            android:textSize="24dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/PA_event_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/family_list_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="FAMILY"
            android:textSize="24dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/PA_family_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>





</android.support.constraint.ConstraintLayout>
